--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "extendable-media-recorder": "^8.1.0",
+    "extendable-media-recorder-wav-encoder": "^7.0.96",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
